--- a/TP5/image_reconstruction_v_final.ipynb
+++ b/TP5/image_reconstruction_v_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "BAdRit5-S_gJ"
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "OXFKDubES_hj"
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 5,
    "metadata": {
     "id": "5Ks3bQw6S_iA"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "apfi9kHyS_md"
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "VSVizJYwbk9o"
    },
@@ -130,36 +130,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[127, 139, 117, ..., 105,  88,  90],\n",
-       "        [124, 111, 155, ...,  75, 100, 125],\n",
-       "        [144, 139, 147, ...,  76, 106, 106],\n",
+       "[array([[148, 157, 148, ...,  86,  99,  94],\n",
+       "        [128, 146, 123, ...,  89,  75, 113],\n",
+       "        [115, 126, 124, ...,  80, 103,  94],\n",
        "        ...,\n",
-       "        [ 24,  13,  39, ...,  49,  32,  51],\n",
-       "        [ 13,  14,  20, ...,  76,  65,  51],\n",
-       "        [ 12,  30,   0, ...,  45,  43,  48]], dtype=uint8),\n",
-       " array([[147, 123, 140, ..., 108,  97,  96],\n",
-       "        [144, 120, 142, ..., 102,  94,  82],\n",
-       "        [126, 144, 124, ..., 104,  75, 111],\n",
+       "        [ 29,  22,  21, ...,  63,  22,  41],\n",
+       "        [  0,  30,  20, ...,  43,  42,  51],\n",
+       "        [ 11,   2,  58, ...,  57,  57,  43]], dtype=uint8),\n",
+       " array([[107, 106, 150, ...,  62,  73, 103],\n",
+       "        [134, 135, 106, ..., 121, 101,  98],\n",
+       "        [146, 131, 120, ...,  78,  78,  89],\n",
        "        ...,\n",
-       "        [  7,  27,  36, ...,  28,  39,  42],\n",
-       "        [ 31,  40,   0, ...,  40,  56,  47],\n",
-       "        [  7,   5,  23, ...,  28,  19,  62]], dtype=uint8),\n",
-       " array([[133, 124, 137, ..., 101, 106, 113],\n",
-       "        [101, 146, 141, ...,  88,  79,  88],\n",
-       "        [147, 134, 116, ..., 114,  59,  77],\n",
+       "        [ 60,  17,  36, ...,  67,  44,  28],\n",
+       "        [  0,  31,  42, ...,  41,  58,  48],\n",
+       "        [ 31,  48,  22, ...,  56,  54,  24]], dtype=uint8),\n",
+       " array([[132, 124, 144, ..., 114, 104,  85],\n",
+       "        [127, 138, 145, ...,  96,  96, 100],\n",
+       "        [150, 128, 120, ...,  97,  90,  98],\n",
        "        ...,\n",
-       "        [ 47,  13,  24, ...,  31,  37,  64],\n",
-       "        [ 10,  41,  16, ...,  54,  71,  52],\n",
-       "        [ 33,  14,  47, ...,  63,  72,  35]], dtype=uint8)]"
+       "        [ 18,  59,  49, ...,  32,  53,  18],\n",
+       "        [ 57,  17,  27, ...,  51,  58,  35],\n",
+       "        [ 28,  31,  31, ...,  45,  70,  48]], dtype=uint8)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,17 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def normalize_img(img):\n",
+    "    minimum = np.min(img)\n",
+    "    img_normalized = img - np.sign(minimum)*np.abs(minimum)\n",
+    "    img_normalized = img_normalized/np.max(img_normalized)\n",
+    "    return img_normalized\n",
     "def recover_v2(degradated_img, psf, sn=None, wiener_inverse=False, show = False):\n",
     "    #paso al espacio de frecuencias la psf y la imagen degradada. El tamaño de la psf puede ser \n",
     "    #menor al tamaño de la imagen degradada.\n",
     "    \n",
     "    #F = G.H, F: imagen original, G: imagen degragaga, H:sistema\n",
     "    channels = []\n",
-    "    degradated_img = degradated_img / np.max(degradated_img)\n",
+    "    degradated_img = normalize_img(degradated_img)\n",
     "    for img_channel in cv.split(degradated_img):\n",
     "        #print(img_channel.shape)\n",
     "        psf_padded = center_image(img_channel, psf) ## en esta funcion se utilizará el tamaño de la imagen para \n",
@@ -292,10 +297,13 @@
     "    \n",
     "    return clean_img\n",
     "\n",
-    "def mse_metric(x, y):\n",
+    "def mse_metric(x, y, dim = 3):\n",
     "    a = x.shape[0]\n",
     "    b = x.shape[1]\n",
-    "    c = x.shape[2]\n",
+    "    if dim > 2:\n",
+    "        c = x.shape[2]\n",
+    "    else:\n",
+    "        c = 1     \n",
     "    x = x.reshape(1, a*b*c)\n",
     "    y = y.reshape(1, a*b*c)\n",
     "    return  np.mean((x - y)**2)   \n",
@@ -304,23 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\malen\\Anaconda3\\envs\\images\\lib\\site-packages\\ipykernel_launcher.py:18: ComplexWarning: Casting complex values to real discards the imaginary part\n"
+      "C:\\Users\\malen\\Anaconda3\\envs\\images\\lib\\site-packages\\ipykernel_launcher.py:23: ComplexWarning: Casting complex values to real discards the imaginary part\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE degradated 86.77205912272136\n",
-      "MSE inverse_simple 89.96910603841145\n",
-      "MSE Wiener 86.15191141764323\n"
+      "MSE degradated 86.49140930175781\n",
+      "MSE inverse_simple 88.74109395345052\n",
+      "MSE Wiener 84.93702189127605\n"
      ]
     }
    ],
@@ -345,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 13,
    "metadata": {
     "id": "qFsvKj7TT-IT"
    },
@@ -359,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -373,7 +381,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\malen\\Anaconda3\\envs\\images\\lib\\site-packages\\ipykernel_launcher.py:18: ComplexWarning: Casting complex values to real discards the imaginary part\n"
+      "C:\\Users\\malen\\Anaconda3\\envs\\images\\lib\\site-packages\\ipykernel_launcher.py:23: ComplexWarning: Casting complex values to real discards the imaginary part\n"
      ]
     },
     {
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +497,7 @@
      "output_type": "stream",
      "text": [
       "MSE degradated 86.298583984375\n",
-      "MSE recovered 92.0057373046875\n"
+      "MSE recovered 90.34086608886719\n"
      ]
     }
    ],
@@ -519,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\malen\\Anaconda3\\envs\\images\\lib\\site-packages\\ipykernel_launcher.py:18: ComplexWarning: Casting complex values to real discards the imaginary part\n"
+      "C:\\Users\\malen\\Anaconda3\\envs\\images\\lib\\site-packages\\ipykernel_launcher.py:23: ComplexWarning: Casting complex values to real discards the imaginary part\n"
      ]
     },
     {
@@ -534,7 +542,7 @@
      "output_type": "stream",
      "text": [
       "MSE degradated 82.41682434082031\n",
-      "MSE recovered 106.2109375\n"
+      "MSE recovered 96.74465942382812\n"
      ]
     }
    ],
@@ -549,6 +557,158 @@
     "print(f'MSE degradated {mse_metric(original, horizontal_moved)}')\n",
     "print(f'MSE recovered {mse_metric(original, horizontal_recovered)}')\n",
     "cv.imshow('original - LEFT- moved image -CENTER- vs recovered -RIGHT-', in_out_images)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regularización Determinísitca (Tikhonov - Miller)\n",
+    "\n",
+    "A continuación se plantea una función para implementar la restauración teniendo en cuenta la regularización para poder condicionar mejor el problema.\n",
+    "\n",
+    "La función a minimizar por este método es la siguiente:\n",
+    "$$ E{||g-H \\hat{f}||^{2} + \\alpha ||C\\hat{f}||^{2}} $$\n",
+    "\n",
+    "Entonces se llega a la siguiente solución:\n",
+    "\n",
+    "$$ \\hat{f} = (H^{T}H + \\alpha C^{T}C)H^{T}g $$\n",
+    "\n",
+    "\n",
+    "Donde H es la respuesta del sistema, C representa la matriz de condición dada por el laplaciano, g es la imagen degradada y alpha es un factor de regularización.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tikhonov_miller(g, h, c, alpha = 15):\n",
+    "    \n",
+    "    channels = []\n",
+    "    for g_channel in cv.split(g):\n",
+    "        g_channel = normalize_img(g_channel)\n",
+    "        h_padded = center_image(g_channel, h)\n",
+    "        c_padded = center_image(g_channel, c)\n",
+    "    \n",
+    "        C = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(c_padded)))\n",
+    "        H = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(h_padded)))\n",
+    "        G = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(g_channel)))\n",
+    "        F_hat = (H.conj()*G) * (H.conj()*H + alpha*C.conj()*C)\n",
+    "        f_hat = np.abs(np.fft.ifftshift(np.fft.ifft2(np.fft.ifftshift(F_hat))))\n",
+    "        maximum = np.max(f_hat)\n",
+    "        f_hat = np.uint8((f_hat/maximum)*256)\n",
+    "        channels.append(f_hat)\n",
+    "        \n",
+    "        \n",
+    "    if len(channels) > 1:\n",
+    "        clean_img = cv.merge(channels)  \n",
+    "    \n",
+    "   \n",
+    "    \n",
+    "    return clean_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE degradated 86.49140930175781\n",
+      "MSE recovered 80.93547058105469\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.array([[-0.25, -0.25, -0.25, -0.25], [-0.25, 1, 1, -0.25], [-0.25, 1, 1, -0.25], [-0.25, -0.25, -0.25, -0.25]])\n",
+    "h = np.ones((16, 16))/(16*16)\n",
+    "g = lenna_blur_noise\n",
+    "f_hat = tikhonov_miller(g, h, c)\n",
+    "\n",
+    "original_ = original\n",
+    "\n",
+    "print(f'MSE degradated {mse_metric(original_, g)}')\n",
+    "print(f'MSE recovered {mse_metric(original_, f_hat)}')\n",
+    "\n",
+    "tikhonov_stacked = np.hstack((g, f_hat))\n",
+    "cv2_imshow('degradated <LEFT> vs recovered <RIGHT>', tikhonov_stacked)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método Iterativo\n",
+    "Se utiliza el método \"Constrained Least Squares\" que utiliza lo siguiente:\n",
+    "\n",
+    "$$ f_{k-1} = f_{k}H^{T}g -  (H^{T}H + \\alpha C^{T}C)f_{}k $$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def iterative_recovering(g, h, c):\n",
+    "    \n",
+    "\n",
+    "    h = center_image(np.array(g), np.array(h))\n",
+    "    c = center_image(np.array(g), np.array(c))\n",
+    "    #\n",
+    "    alpha = 15\n",
+    "\n",
+    "    mod_h = np.transpose(h)*h\n",
+    "    mod_c = np.transpose(c)*c\n",
+    "    eig,eigv=np.linalg.eig(mod_h + alpha*mod_c)\n",
+    "    g = normalize_img(g)\n",
+    "    beta=1/max(eig)\n",
+    "\n",
+    "    c = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(c)))\n",
+    "    h = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(h)))\n",
+    "    g = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(g)))\n",
+    "    fo=beta*h.conj()*g\n",
+    "    fk=np.copy(fo)\n",
+    "\n",
+    "\n",
+    "    for i in range(2):\n",
+    "        #Ecuación de actualización\n",
+    "        fk = fo + fk - beta*(mod_h+alpha*mod_c)*(fk)\n",
+    "        f_final = np.copy(fk)\n",
+    "    f_final = np.abs(np.fft.ifftshift(np.fft.ifft2(np.fft.ifftshift(f_final))))\n",
+    "    maximum = np.max(f_final)\n",
+    "    f_final = np.uint8((f_final/maximum)*256)\n",
+    "    return f_final\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orig = cv.imread('./pics/lenna.jpg', 0)\n",
+    "g = cv.filter2D(orig, -1, h)\n",
+    "recovered_iterative = iterative_recovering(g, h, c)\n",
+    "\n",
+    "#print(f'MSE degradated {mse_metric(orig, g, dim = 2)}')\n",
+    "#print(f'MSE recovered {mse_metric(orig, recovered_iterative, dim = 2)}')\n",
+    "\n",
+    "in_out_images = np.hstack((orig, g, recovered_iterative))    \n",
+    "\n",
+    "cv.imshow('original - LEFT- blured image -CENTER- vs recovered -RIGHT-', in_out_images)\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
    ]
