--- a/TP8-Tomografia/tomography.ipynb
+++ b/TP8-Tomografia/tomography.ipynb
@@ -2,64 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
-    "import matplotlib\n",
+    "import matplotlib as plt\n",
     "matplotlib.use(\"TkAgg\")\n",
     "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
-    "from matplotlib.figure import Figure"
+    "from matplotlib.figure import Figure\n",
+    "from matplotlib.patches import Ellipse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Button Callbacks\n",
-    "def add_clicked():\n",
-    "    # Add ellipse to plot\n",
-    "    pass\n",
-    "    \n",
-    "def rem_clicked(): \n",
-    "    # Remove last plotted ellipse\n",
-    "    pass\n",
-    "\n",
-    "def see_clicked(): \n",
-    "    # See\n",
-    "    pass\n",
-    "    \n",
-    "def calc_rad_clicked(): \n",
-    "    # Calc\n",
-    "    pass\n",
-    "\n",
-    "def calc_rad_inv_clicked(): \n",
-    "    # Calc\n",
-    "    pass\n",
-    "\n",
-    "# Intensidad: Varía entre -1 y 1, ya que es aditiva. (I)\n",
-    "# Inclinación: Ángulo en grados de rotación respecto al eje x. (A)\n",
-    "# Semi-eje X: Valor del semi-eje X de la elipse, entre (0 ; 1]. (X)\n",
-    "# Semi-eje Y: Valor del semi-eje Y de la elipse, entre (0 ; 1]. (Y)\n",
-    "# Centro X: Coordenada X del centro de la elipse, entre [-1 ; 1]. (CX)\n",
-    "# Centro Y: Coordenada Y del centro de la elipse, entre [-1 ; 1]. (CY)"
+    "# e = [intensity, inc, axis_x, axis_y, center_x, center_y]\n",
+    "# e =    e[0]    e[1]   e[2]    e[3]     e[4]      e[5]\n",
+    "def plot_phantom(ellipses, figure):\n",
+    "    for e in ellipses:\n",
+    "        ell = Ellipse(xy=(e[4], e[5]), width=e[2], height=e[3], angle=e[1])\n",
+    "        figure.add_artist(ell)\n",
+    "        ell.set_clip_box(figure.bbox)\n",
+    "        ell.set_alpha(e[0])\n",
+    "#        ell.set_facecolor()\n",
+    "    figure.set_xlim(-1, 1)\n",
+    "    figure.set_ylim(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a1eca6d790>]"
+       "[<matplotlib.lines.Line2D at 0x2a1ef523520>]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,9 +66,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 58)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<tokenize>\"\u001b[1;36m, line \u001b[1;32m58\u001b[0m\n\u001b[1;33m    vals = [float(i) for i in vals]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
+   "source": [
+    "ellipses = list()\n",
+    "    \n",
+    "def checker(a, c):\n",
+    "    def func(b):\n",
+    "        return a<=b and b<=c\n",
+    "    return func\n",
+    "\n",
+    "def check(element, check_func):\n",
+    "    try:\n",
+    "        element = float(element)\n",
+    "        return check_func(element)\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "\n",
+    "# Button Callbacks\n",
+    "def add_clicked():\n",
+    "    # Add ellipse to plot \n",
+    "    checkers = [checker(-1, 1), checker(0, 359), checker(10e-9, 1), checker(10e-9, 1), checker(-1, 1), checker(-1, 1)]\n",
+    "    vals = [intensity, inc, axis_x, axis_y, center_x, center_y]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]):\n",
+    "        vals = [float(i) for i in vals]\n",
+    "        print('correct input')\n",
+    "        # add to ellipses\n",
+    "        ellipses.append(vals)\n",
+    "        print(ellipses)\n",
+    "    else:\n",
+    "        print('incorrect input')\n",
+    "    # Plot new graph\n",
+    "    plot_phantom(ellipses, phantom_fig)\n",
+    "        \n",
+    "# Intensidad: Varía entre -1 y 1, ya que es aditiva. (I)\n",
+    "# Inclinación: Ángulo en grados de rotación respecto al eje x. (A)\n",
+    "# Semi-eje X: Valor del semi-eje X de la elipse, entre (0 ; 1]. (X)\n",
+    "# Semi-eje Y: Valor del semi-eje Y de la elipse, entre (0 ; 1]. (Y)\n",
+    "# Centro X: Coordenada X del centro de la elipse, entre [-1 ; 1]. (CX)\n",
+    "# Centro Y: Coordenada Y del centro de la elipse, entre [-1 ; 1]. (CY)\n",
+    "\n",
+    "def rem_clicked(): \n",
+    "    # Remove last plotted ellipse\n",
+    "    if ellipses:\n",
+    "        ellipses.pop()\n",
+    "        print(ellipses)\n",
+    "    # Plot new graph\n",
+    "    plot_phantom(ellipses, phantom_fig)\n",
+    "\n",
+    "def see_clicked(): \n",
+    "    # See\n",
+    "    pass\n",
+    "    \n",
+    "def calc_rad_clicked(): \n",
+    "    # Parse\n",
+    "    checkers = [checker(0, 180), checker(1, 180), checker(0, 180), checker(0, 180)]\n",
+    "    vals = [fro, to, step, angle]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]) and\n",
+    "            fro<to and step<=(fro-to) and angle<to and angle>fro:\n",
+    "        vals = [float(i) for i in vals]\n",
+    "        print('correct input')\n",
+    "        # Calculate radon\n",
+    "        \n",
+    "        # Plot result\n",
+    "        \n",
+    "    else:\n",
+    "        print('incorrect input')\n",
+    "\n",
+    "def calc_rad_inv_clicked(): \n",
+    "    # Parse\n",
+    "    checkers = [checker(0, 180), checker(0, 180), checker(0, 180)]\n",
+    "    vals = [fro_i, to_i, step_i]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]) and fro_i<to_i and step<=(fro-to):\n",
+    "        vals = [float(i) for i in vals]\n",
+    "        print('correct input')\n",
+    "        interp = var_int.get()\n",
+    "        filt = filt.get()\n",
+    "        # Calculate radon inverse \n",
+    "        \n",
+    "        # Plot result\n",
+    "        \n",
+    "    else:\n",
+    "        print('incorrect input')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct input\n",
+      "[[1.0, 1.0, 0.5, 0.5, 1.0, 0.6], [1.0, 1.0, 0.5, 0.5, 1.0, 0.6], [1.0, 1.0, 0.5, 0.5, 1.0, 0.6], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create root window \n",
     "root = Tk() \n",
