--- a/TP8-Tomografia/tomography.ipynb
+++ b/TP8-Tomografia/tomography.ipynb
@@ -1,22 +1,89 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 189,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import tkinter as tk\n",
-    "import matplotlib as plt\n",
-    "matplotlib.use(\"TkAgg\")\n",
-    "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
-    "from matplotlib.figure import Figure\n",
-    "from matplotlib.patches import Ellipse"
+    "# Tomography"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import Tk, LabelFrame, Label, Entry, Button, StringVar, OptionMenu\n",
+    "import matplotlib as plt\n",
+    "plt.use(\"TkAgg\")\n",
+    "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
+    "from matplotlib.backends.backend_agg import FigureCanvasAgg as FigureCanvas\n",
+    "from matplotlib.figure import Figure\n",
+    "from matplotlib.patches import Ellipse\n",
+    "import numpy as np\n",
+    "from skimage.transform import radon, iradon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GUI Callbacks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GUI - helper functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Input validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ellipses = list()\n",
+    "    \n",
+    "def checker(a, c):\n",
+    "    def func(b):\n",
+    "        return a<=b and b<=c\n",
+    "    return func\n",
+    "\n",
+    "def check(element, check_func):\n",
+    "    try:\n",
+    "        element = float(element)\n",
+    "        return check_func(element)\n",
+    "    except ValueError:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phantom, Radon and Inverse Radon plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +92,178 @@
     "def plot_phantom(ellipses, figure):\n",
     "    for e in ellipses:\n",
     "        ell = Ellipse(xy=(e[4], e[5]), width=e[2], height=e[3], angle=e[1])\n",
+    "        print('Artist: ', ell)\n",
     "        figure.add_artist(ell)\n",
     "        ell.set_clip_box(figure.bbox)\n",
     "        ell.set_alpha(e[0])\n",
     "#        ell.set_facecolor()\n",
+    "\n",
     "    figure.set_xlim(-1, 1)\n",
-    "    figure.set_ylim(-1, 1)"
+    "    figure.set_ylim(-1, 1)\n",
+    "    canvas_p.draw()\n",
+    "    \n",
+    "def plot_rad(sinogram, figure):\n",
+    "    figure.imshow(sinogram, cmap=plt.cm.Greys_r)\n",
+    "    canvas_r.draw()\n",
+    "    pass\n",
+    "\n",
+    "def plot_radon_inv(rad_inv, figure):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Callbacks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Button Callbacks\n",
+    "def add_clicked():\n",
+    "    # Add ellipse to plot \n",
+    "    checkers = [checker(-1, 1), checker(0, 359), checker(10e-9, 1), checker(10e-9, 1), checker(-1, 1), checker(-1, 1)]\n",
+    "    vals = [intensity, inc, axis_x, axis_y, center_x, center_y]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]):\n",
+    "        vals = [float(i) for i in vals]\n",
+    "        print('add_clicked correct input')\n",
+    "        # add to ellipses\n",
+    "        ellipses.append(vals)\n",
+    "        print(ellipses)\n",
+    "    else:\n",
+    "        print('add_clicked incorrect input')\n",
+    "    # Plot new graph\n",
+    "    plot_phantom(ellipses, phantom_fig)\n",
+    "        \n",
+    "# Intensidad: Varía entre -1 y 1, ya que es aditiva. (I)\n",
+    "# Inclinación: Ángulo en grados de rotación respecto al eje x. (A)\n",
+    "# Semi-eje X: Valor del semi-eje X de la elipse, entre (0 ; 1]. (X)\n",
+    "# Semi-eje Y: Valor del semi-eje Y de la elipse, entre (0 ; 1]. (Y)\n",
+    "# Centro X: Coordenada X del centro de la elipse, entre [-1 ; 1]. (CX)\n",
+    "# Centro Y: Coordenada Y del centro de la elipse, entre [-1 ; 1]. (CY)\n",
+    "\n",
+    "def rem_clicked(): \n",
+    "    # Remove last plotted ellipse\n",
+    "    if ellipses:\n",
+    "        ellipses.pop()\n",
+    "        print(ellipses)\n",
+    "    # Plot new graph\n",
+    "    plot_phantom(ellipses=ellipses, figure=phantom_fig)\n",
+    "\n",
+    "def see_clicked(): \n",
+    "    # Parse\n",
+    "    checkers = [checker(0, 180), checker(1, 180), checker(0, 180), checker(0, 180)]\n",
+    "\n",
+    "    vals = [fro, to, step, angle]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "    \n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]):\n",
+    "        print('calc_rad_clicked correct input')\n",
+    "        vals = [float(val) for val in vals]\n",
+    "        fro_, to_, step_, angle_ = vals\n",
+    "        \n",
+    "        print('Vals (fro, to, step, angle): ', vals)\n",
+    "        if fro_ < to_ and step_ <= (to_-fro_) and angle_<to_ and angle_>fro_:\n",
+    "            vals = [float(i) for i in vals]\n",
+    "            print('\\tcalc_rad_clicked correct intervals')\n",
+    "            # Calculate radon\n",
+    "            thetas = [fro_ + i*step_ for i in range(int((to_-fro_)/step_))]\n",
+    "            sinogram = radon(phantom_fig.images[0], theta=thetas, circle=True)\n",
+    "            # Plot result\n",
+    "            plot_rad(sinogram=sinogram, figure=rad_fig)\n",
+    "        else:\n",
+    "            print('calc_rad_inv_clicked incorrect input')\n",
+    "    \n",
+    "def calc_rad_clicked(): \n",
+    "\n",
+    "    # Parse\n",
+    "    checkers = [checker(0, 180), checker(1, 180), checker(0, 180)]\n",
+    "\n",
+    "    vals = [fro, to, step]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "    \n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]):\n",
+    "        print('calc_rad_clicked correct input')\n",
+    "        vals = [float(val) for val in vals]\n",
+    "        fro_, to_, step_ = vals\n",
+    "        \n",
+    "        print('Vals (fro, to, step, angle): ', vals)\n",
+    "        if fro_ < to_ and step_ <= (to_-fro_):\n",
+    "            vals = [float(i) for i in vals]\n",
+    "            print('\\tcalc_rad_clicked correct intervals')\n",
+    "            # Calculate radon\n",
+    "            thetas = [fro_ + i*step_ for i in range(int((to_-fro_)/step_))]\n",
+    "            \n",
+    "#             https://stackoverflow.com/questions/35355930/matplotlib-figure-to-image-as-a-numpy-array\n",
+    "#             cnv = FigureCanvas(f_1)\n",
+    "            cnv = canvas_p\n",
+    "            canvas_p.draw()\n",
+    "            width, height = f_1.get_size_inches() * f_1.get_dpi()\n",
+    "#             width, height = phantom_fig.get_size_inches() * phantom_fig.get_dpi()\n",
+    "            width, height = int(width), int(height)\n",
+    "            \n",
+    "            image = np.fromstring(cnv.tostring_rgb(), dtype='uint8').reshape(height, width, 3)\n",
+    "            def rgb2gray(rgb):\n",
+    "                return np.dot(rgb[...,:3], [0.2989, 0.5870, 0.1140])\n",
+    "            \n",
+    "            image = rgb2gray(image) \n",
+    "            image = np.asarray(image, dtype='uint8')\n",
+    "#             plt.imshow(gray, cmap=plt.get_cmap('gray'), vmin=0, vmax=1)\n",
+    "            print(image)\n",
+    "            print(image.shape)\n",
+    "            sinogram = radon(image, theta=thetas, circle=True)\n",
+    "            # Plot result\n",
+    "            plot_rad(sinogram=sinogram, figure=rad_fig)\n",
+    "        else:\n",
+    "            print('calc_rad_inv_clicked incorrect input')\n",
+    "\n",
+    "def calc_rad_inv_clicked(): \n",
+    "    # Parse\n",
+    "    checkers = [checker(0, 180), checker(0, 180), checker(0, 180)]\n",
+    "    vals = [fro_i, to_i, step_i]\n",
+    "    vals = [i.get() for i in vals]\n",
+    "\n",
+    "    if all([check(a, b) for a, b in zip(vals, checkers)]) and fro_i<to_i and step<=(fro-to):\n",
+    "        vals = [float(i) for i in vals]\n",
+    "        print('calc_rad_inv_clicked correct input')\n",
+    "        interp = var_int.get()\n",
+    "        filt = filt.get()\n",
+    "        if sinogram is not None:\n",
+    "            print('Entro')\n",
+    "            # Calculate radon inverse \n",
+    "            thetas = [fro + i*step for i in range(int((to-fro)/step))]\n",
+    "            rad_inv = iradon(sinogram, theta=theta, circle=True)\n",
+    "            # Plot result\n",
+    "            plot_radon_inv(rad_inv=rad_inv, figure=rad_inv_fig)\n",
+    "    else:\n",
+    "        print('calc_rad_inv_clicked incorrect input')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GUI Definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a1ef523520>]"
+       "[<matplotlib.lines.Line2D at 0x1ca59b48cd0>]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,120 +285,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 58)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<tokenize>\"\u001b[1;36m, line \u001b[1;32m58\u001b[0m\n\u001b[1;33m    vals = [float(i) for i in vals]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
-   "source": [
-    "ellipses = list()\n",
-    "    \n",
-    "def checker(a, c):\n",
-    "    def func(b):\n",
-    "        return a<=b and b<=c\n",
-    "    return func\n",
-    "\n",
-    "def check(element, check_func):\n",
-    "    try:\n",
-    "        element = float(element)\n",
-    "        return check_func(element)\n",
-    "    except ValueError:\n",
-    "        return False\n",
-    "\n",
-    "# Button Callbacks\n",
-    "def add_clicked():\n",
-    "    # Add ellipse to plot \n",
-    "    checkers = [checker(-1, 1), checker(0, 359), checker(10e-9, 1), checker(10e-9, 1), checker(-1, 1), checker(-1, 1)]\n",
-    "    vals = [intensity, inc, axis_x, axis_y, center_x, center_y]\n",
-    "    vals = [i.get() for i in vals]\n",
-    "    if all([check(a, b) for a, b in zip(vals, checkers)]):\n",
-    "        vals = [float(i) for i in vals]\n",
-    "        print('correct input')\n",
-    "        # add to ellipses\n",
-    "        ellipses.append(vals)\n",
-    "        print(ellipses)\n",
-    "    else:\n",
-    "        print('incorrect input')\n",
-    "    # Plot new graph\n",
-    "    plot_phantom(ellipses, phantom_fig)\n",
-    "        \n",
-    "# Intensidad: Varía entre -1 y 1, ya que es aditiva. (I)\n",
-    "# Inclinación: Ángulo en grados de rotación respecto al eje x. (A)\n",
-    "# Semi-eje X: Valor del semi-eje X de la elipse, entre (0 ; 1]. (X)\n",
-    "# Semi-eje Y: Valor del semi-eje Y de la elipse, entre (0 ; 1]. (Y)\n",
-    "# Centro X: Coordenada X del centro de la elipse, entre [-1 ; 1]. (CX)\n",
-    "# Centro Y: Coordenada Y del centro de la elipse, entre [-1 ; 1]. (CY)\n",
-    "\n",
-    "def rem_clicked(): \n",
-    "    # Remove last plotted ellipse\n",
-    "    if ellipses:\n",
-    "        ellipses.pop()\n",
-    "        print(ellipses)\n",
-    "    # Plot new graph\n",
-    "    plot_phantom(ellipses, phantom_fig)\n",
-    "\n",
-    "def see_clicked(): \n",
-    "    # See\n",
-    "    pass\n",
-    "    \n",
-    "def calc_rad_clicked(): \n",
-    "    # Parse\n",
-    "    checkers = [checker(0, 180), checker(1, 180), checker(0, 180), checker(0, 180)]\n",
-    "    vals = [fro, to, step, angle]\n",
-    "    vals = [i.get() for i in vals]\n",
-    "    if all([check(a, b) for a, b in zip(vals, checkers)]) and\n",
-    "            fro<to and step<=(fro-to) and angle<to and angle>fro:\n",
-    "        vals = [float(i) for i in vals]\n",
-    "        print('correct input')\n",
-    "        # Calculate radon\n",
-    "        \n",
-    "        # Plot result\n",
-    "        \n",
-    "    else:\n",
-    "        print('incorrect input')\n",
-    "\n",
-    "def calc_rad_inv_clicked(): \n",
-    "    # Parse\n",
-    "    checkers = [checker(0, 180), checker(0, 180), checker(0, 180)]\n",
-    "    vals = [fro_i, to_i, step_i]\n",
-    "    vals = [i.get() for i in vals]\n",
-    "    if all([check(a, b) for a, b in zip(vals, checkers)]) and fro_i<to_i and step<=(fro-to):\n",
-    "        vals = [float(i) for i in vals]\n",
-    "        print('correct input')\n",
-    "        interp = var_int.get()\n",
-    "        filt = filt.get()\n",
-    "        # Calculate radon inverse \n",
-    "        \n",
-    "        # Plot result\n",
-    "        \n",
-    "    else:\n",
-    "        print('incorrect input')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct input\n",
-      "[[1.0, 1.0, 0.5, 0.5, 1.0, 0.6], [1.0, 1.0, 0.5, 0.5, 1.0, 0.6], [1.0, 1.0, 0.5, 0.5, 1.0, 0.6], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0]]\n"
+      "add_clicked correct input\n",
+      "[[0.2, 0.1, 0.2, 0.8, 0.0, 0.0]]\n",
+      "Artist:  Ellipse(xy=(0.0, 0.0), width=0.2, height=0.8, angle=0.1)\n",
+      "calc_rad_clicked correct input\n",
+      "Vals (fro, to, step, angle):  [0.0, 180.0, 10.0]\n",
+      "\tcalc_rad_clicked correct intervals\n",
+      "[[254 254 254 ... 254 254 254]\n",
+      " [254 254 254 ... 254 254 254]\n",
+      " [254 254 254 ... 254 254 254]\n",
+      " ...\n",
+      " [254 254 254 ... 254 254 254]\n",
+      " [254 254 254 ... 254 254 254]\n",
+      " [254 254 254 ... 254 254 254]]\n",
+      "(450, 387)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-709e2bdeafef>:85: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  image = np.fromstring(cnv.tostring_rgb(), dtype='uint8').reshape(height, width, 3)\n",
+      "<ipython-input-4-709e2bdeafef>:94: UserWarning: Image dtype is not float. By default radon will assume you want to preserve the range of your image (preserve_range=True). In scikit-image 0.18 this behavior will change to preserve_range=False. To avoid this warning, explicitly specify the preserve_range parameter.\n",
+      "  sinogram = radon(image, theta=thetas, circle=True)\n",
+      "c:\\users\\tomas\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\skimage\\transform\\radon_transform.py:87: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  coords = np.array(np.ogrid[:image.shape[0], :image.shape[1]])\n",
+      "c:\\users\\tomas\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\skimage\\transform\\radon_transform.py:91: UserWarning: Radon transform: image must be zero outside the reconstruction circle\n",
+      "  warn('Radon transform: image must be zero outside the '\n"
      ]
     }
    ],
    "source": [
     "# Create root window \n",
-    "root = Tk() \n",
+    "root = tk.Tk() \n",
     "  \n",
     "# Root window title and dimension \n",
     "root.title(\"Tomography Simulator\") \n",
@@ -311,9 +457,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dip)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dip"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
